# AgenticFacilitiesMaintenance

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_server.py
src/: __init__.py  crew.py
src/agents/: definitions.py
src/api/: routes.py
src/data/: database.py
src/docs/: elevator_maintenance_guide.md  hvac_maintenance_guide.md  plumbing_electrical_guide.md  safety_compliance_guide.md
src/governance/: __init__.py  engine.py
src/models/: __init__.py  schemas.py
src/tasks/: definitions.py
src/tools/: cmms_tools.py  rag_tools.py
tests/: conftest.py  test_api.py  test_database.py  test_governance.py  test_models.py
